--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# Packages de base
-numpy==1.25.2
+# Packages scientifiques
+numpy==1.26.4
 pandas==2.3.2
 scikit-learn==1.2.2
 scipy==1.16.1
@@ -10,7 +10,7 @@ plotly==6.3.0
 Pillow==11.3.0
 Unidecode==1.4.0
 
-# Streamlit et extension
+# Streamlit et extensions
 streamlit==1.49.1
 shap==0.42.1
 nbformat==5.10.4
@@ -20,9 +20,11 @@ nbconvert==7.16.6
 category_encoders==2.6.0
 gdown==4.7.1
 
-# Géospatial : versions compatibles Python 3.11
+# Géospatial
 geopandas>=1.3.0
 mapclassify>=2.4.2
 
-
+# Pour éviter l'erreur distutils
+setuptools
+wheel
 
