--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Unidecode==1.4.0
 
 # Streamlit et extensions
 streamlit==1.49.1
-shap==0.42.1
+# shap==0.42.1
 nbformat==5.10.4
 nbconvert==7.16.6
 
@@ -21,8 +21,8 @@ category_encoders==2.6.0
 gdown==4.7.1
 
 # Géospatial
-geopandas>=1.3.0
-mapclassify>=2.4.2
+# geopandas>=1.3.0
+# mapclassify>=2.4.2
 
 # Pour éviter l'erreur distutils
 setuptools
